@@ -1,0 +1,2 @@
+<?xml version="1.0" encoding="UTF-8"?>
+<SimpleMessage severity="Warning" text="cannot delete temporary file" />
